practice with dom

--- a/index.html
+++ b/index.html
@@ -5,8 +5,41 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div class="container">
+        <h2 class="header">
+            Add Post
+        </h2>
+        <input type="text" placeholder="type sth">
+        <hr />
+        <button class="btn ">add post</button>
+        <h2 class="header">
+            My Post
+        </h2>
+    <ol class="conten-ol">
+        <li class="content-li">
+            <p>post1</p>
+            <button>x</button>
+        </li>
+        <li class="content-li">
+            <p>post2</p>
+            <button>x</button>
+        </li>
+        <li class="content-li">
+            <p>post3</p>
+            <button>x</button>
+        </li>
+        <li class="content-li">
+            <p>post4</p>
+            <button>x</button>
+        </li>
+    </ol>
+    <hr/>
+    <button>clear all post</button>
+</div>
+    
     
 
     <script src="./js.js"></script>
